--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "todo-react",
+  "description": "TODO web application with React.",
   "private": true,
   "version": "0.0.0",
+  "author": "David Seija",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -13,7 +15,8 @@
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.11.10",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
