--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
-    "redux": "^4.2.1",
-    "redux-undo": "^1.0.1"
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@redux-devtools/core": "^3.13.1",
